# nspire-rust-template

./: Cargo.toml  Makefile.toml  README.md
src/: main.rs
