[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
ndless = "0.6.1"
ndless-handler = "0.1.2"

[package.metadata.zehn]
name = "{{project-name}}"
compress = true
notice = "Auto generated with cargo-generate"
flags = "--240x320-support true"

[profile.release]
lto = true
